Добавляет кнопку в mobile header

--- a/index.html
+++ b/index.html
@@ -37,6 +37,51 @@
                     +38 096 111 11 11</a>
                 </li>
             </ul>
+
+            <button type="button" 
+                class="menu-button is-open" 
+                aria-expanded="false" 
+                data-menu-button>
+                <svg class="menu-button__svg" width="40px" height="40px" 
+                    aria-label="Переключатель мобильного меню">
+                    <use class="menu-button__icon-menu" href="./images/sprite.svg#icon-menu"></use>
+                    <use class="menu-button__icon-cross" href="./images/sprite.svg#icon-cross"></use>
+                </svg>
+            </button>
+        </div>
+
+        <div class="container mobile">
+            <nav class="mobile-nav">
+                <ul class="list mobile-nav__list">
+                    <li class="mobile-nav__item"><a class="link mobile-nav__link mobile-nav__link--current" href="./index.html">Студия</a></li>
+                    <li class="mobile-nav__item"><a class="link mobile-nav__link mobile-nav__link--inactive" href="./portfolio.html">Портфолио</a></li>
+                    <li class="mobile-nav__item"><a class="link mobile-nav__link mobile-nav__link--inactive" href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="list mobile-contacts">
+                <li class="mobile-contacts__item">
+                    <a class="link mobile-contacts__link" href="mailto:info@devstudio.com">
+                        info@devstudio.com</a>
+                </li>
+                <li class="mobile-contacts__item">
+                    <a class="link mobile-contacts__link" href="tel:+380961111111">
+                        +38 096 111 11 11</a>
+                </li>
+            </ul>
+            <ul class="list mobile-social">
+                <li class="mobile-social__item">
+                    <a class="link mobile-social__link" href="#">Instagram</a>
+                </li>
+                <li>
+                    <a class="link mobile-social__link" href="#">Twitter</a>
+                </li>
+                <li>
+                    <a class="link mobile-social__link" href="#">Facebook</a>
+                </li>
+                <li>
+                    <a class="link mobile-social__link" href="#">LinkedIn</a>
+                </li>
+            </ul>
         </div>
     </header>
 
