--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </button>
         </div>
 
-        <div class="container mobile">
+        <div class="mobile-container">
             <nav class="mobile-nav">
                 <ul class="list mobile-nav__list">
                     <li class="mobile-nav__item"><a class="link mobile-nav__link mobile-nav__link--current" href="./index.html">Студия</a></li>
@@ -60,12 +60,12 @@
             </nav>
             <ul class="list mobile-contacts">
                 <li class="mobile-contacts__item">
-                    <a class="link mobile-contacts__link" href="mailto:info@devstudio.com">
-                        info@devstudio.com</a>
+                    <a class="link mobile-contacts__link mobile-contacts__link--tel" href="tel:+380961111111">
+                        +38 096 111 11 11</a>
                 </li>
                 <li class="mobile-contacts__item">
-                    <a class="link mobile-contacts__link" href="tel:+380961111111">
-                        +38 096 111 11 11</a>
+                    <a class="link mobile-contacts__link mobile-contacts__link--mail" href="mailto:info@devstudio.com">
+                        info@devstudio.com</a>
                 </li>
             </ul>
             <ul class="list mobile-social">
@@ -359,35 +359,35 @@
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
                             <svg class="customers-icon" wigth="40" height="52">
-                                <use href="./images/sprite.svg#icon-logo2">
+                                <use href="./images/sprite.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
                             <svg class="customers-icon" wigth="41" height="42.6">
-                                <use href="./images/sprite.svg#icon-logo3">
+                                <use href="./images/sprite.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
                             <svg class="customers-icon" wigth="79.66" height="42.02">
-                                <use href="./images/sprite.svg#icon-logo4">
+                                <use href="./images/sprite.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
                             <svg class="customers-icon" wigth="59" height="47">
-                                <use href="./images/sprite.svg#icon-logo5">
+                                <use href="./images/sprite.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
                             <svg class="customers-icon" wigth="88.48" height="45.44">
-                                <use href="./images/sprite.svg#icon-logo6">
+                                <use href="./images/sprite.svg#icon-logo6"></use>
                             </svg>
                         </a>
                     </li>
@@ -427,28 +427,28 @@
                     <li class="join-item icon-instagram">
                         <a class="link join-link" href="#">
                             <svg class="join-icon" wigth="20" height="20">
-                                <use href="./images/sprite.svg#icon-instagram1">
+                                <use href="./images/sprite.svg#icon-instagram1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-twitter">
                         <a class="link join-link" href="#">
                             <svg class="join-icon" wigth="20" height="20">
-                                <use href="./images/sprite.svg#icon-twitter1">
+                                <use href="./images/sprite.svg#icon-twitter1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-facebook">
                         <a class="link join-link" href="#">
                             <svg class="join-icon" wigth="20" height="20">
-                                <use href="./images/sprite.svg#icon-facebook1">
+                                <use href="./images/sprite.svg#icon-facebook1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-linkedin">
                         <a class="link join-link" href="#">
                             <svg class="join-icon" wigth="20" height="20">
-                                <use href="./images/sprite.svg#icon-linkedin1">
+                                <use href="./images/sprite.svg#icon-linkedin1"></use>
                             </svg>
                         </a>
                     </li>
