Добавляет стили в выпадающее меню

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 <li class="mobile-social__item">
                     <a class="link mobile-social__link" href="#">Instagram</a>
                 </li>
-                <li>
+                <li class="mobile-social__item">
                     <a class="link mobile-social__link" href="#">Twitter</a>
                 </li>
-                <li>
+                <li class="mobile-social__item">
                     <a class="link mobile-social__link" href="#">Facebook</a>
                 </li>
-                <li>
+                <li class="mobile-social__item">
                     <a class="link mobile-social__link" href="#">LinkedIn</a>
                 </li>
             </ul>
