Добавляет стили в workers-img

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 ./images/team/worker1-540-520@2x.jpg 2x" 
                                 type="image/jpeg" />
                             <img class="workers-img" src="./images/team/worker1-450-460@1x.jpg" 
-                            alt="Фото члена команды номер 1" />
+                            alt="Фото члена команды номер 1" width="450px"/>
                         </picture>
                         
                         <h3 class="workers-name">Игорь Демьяненко</h3>
