--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
                                 ./images/team/worker1-540-520@2x.jpg 2x" 
                                 type="image/jpeg" />
                             <img class="workers-img" src="./images/team/worker1-450-460@1x.jpg" 
-                            alt="Фото члена команды номер 1" width="450px"/>
+                            alt="Фото члена команды номер 1" style="display: block; max-width: 100%; height: auto;"
+                            >
                         </picture>
                         
                         <h3 class="workers-name">Игорь Демьяненко</h3>
@@ -271,7 +272,8 @@
                                 type="image/jpeg" />
                             <source srcset="./images/team/worker2-270-260@1x.jpg 1x,
                                 ./images/team/worker2-540-520@2x.jpg 2x" type="image/jpeg" />
-                            <img class="workers-img" src="./images/team/worker2-450-460@1x.jpg" alt="Фото члена команды номер 2" />
+                            <img class="workers-img" src="./images/team/worker2-450-460@1x.jpg" 
+                            alt="Фото члена команды номер 2" style="display: block; max-width: 100%; height: auto;" >
                         </picture>
 
                         <h3 class="workers-name">Ольга Репина</h3>
@@ -317,7 +319,8 @@
                                 media="(max-width: 1199px)" type="image/jpeg" />
                             <source srcset="./images/team/worker3-270-260@1x.jpg 1x,
                                 ./images/team/worker3-540-520@2x.jpg 2x" type="image/jpeg" />
-                            <img class="workers-img" src="./images/team/worker3-450-460@1x.jpg" alt="Фото члена команды номер 3" />
+                            <img class="workers-img" src="./images/team/worker3-450-460@1x.jpg" 
+                            alt="Фото члена команды номер 3" style="display: block; max-width: 100%; height: auto;" >
                         </picture>
 
                         <h3 class="workers-name">Николай Тарасов</h3>
@@ -363,7 +366,8 @@
                                 type="image/jpeg" />
                             <source srcset="./images/team/worker4-270-260@1x.jpg 1x,
                                 ./images/team/worker4-540-520@2x.jpg 2x" type="image/jpeg" />
-                            <img class="workers-img" src="./images/team/worker4-450-460@1x.jpg" alt="Фото члена команды номер 4" />
+                            <img class="workers-img" src="./images/team/worker4-450-460@1x.jpg" 
+                            alt="Фото члена команды номер 4" style="display: block; max-width: 100%; height: auto;" >
                         </picture>
 
                         <h3 class="workers-name">Михаил Ермаков</h3>
