Добавляет стили картинок в portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,9 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample1-370-294@1x.jpg 1x,
                                         ./images/samples/sample1-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample1-450-294@1x.jpg" alt="Стартовая страница сайта с изображением членов команды" />
+                                    <img src="./images/samples/sample1-450-294@1x.jpg" 
+                                    alt="Стартовая страница сайта с изображением членов команды" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -155,7 +157,8 @@
                                         media="(max-width: 1199px)" type="image/jpeg" />
                                     <source srcset="./images/samples/sample2-370-294@1x.jpg 1x,
                                         ./images/samples/sample2-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample2-450-294@1x.jpg" alt="Два баскетболиста борются за мяч" />
+                                    <img src="./images/samples/sample2-450-294@1x.jpg" alt="Два баскетболиста борются за мяч"
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -185,7 +188,8 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample3-370-294@1x.jpg 1x,
                                         ./images/samples/sample3-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample3-450-294@1x.jpg" alt="Логотип в виде рыбы и название" />
+                                    <img src="./images/samples/sample3-450-294@1x.jpg" alt="Логотип в виде рыбы и название" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -215,7 +219,8 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample4-370-294@1x.jpg 1x,
                                         ./images/samples/sample4-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample4-450-294@1x.jpg" alt="Наушники с большими амбюшурами" />
+                                    <img src="./images/samples/sample4-450-294@1x.jpg" alt="Наушники с большими амбюшурами"
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -245,7 +250,8 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample5-370-294@1x.jpg 1x,
                                         ./images/samples/sample5-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample5-450-294@1x.jpg" alt="Коробки с логотипами и названиями" />
+                                    <img src="./images/samples/sample5-450-294@1x.jpg" alt="Коробки с логотипами и названиями" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -275,7 +281,8 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample6-370-294@1x.jpg 1x,
                                         ./images/samples/sample6-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample6-450-294@1x.jpg" alt="Стартовая страница сайта" />
+                                    <img src="./images/samples/sample6-450-294@1x.jpg" alt="Стартовая страница сайта" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -305,7 +312,8 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample7-370-294@1x.jpg 1x,
                                         ./images/samples/sample7-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample7-450-294@1x.jpg" alt="Страницы журнала с фотографиями девушек" />
+                                    <img src="./images/samples/sample7-450-294@1x.jpg" alt="Страницы журнала с фотографиями девушек" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -335,7 +343,8 @@
                                         media="(max-width: 1199px)" type="image/jpeg" />
                                     <source srcset="./images/samples/sample8-370-294@1x.jpg 1x,
                                         ./images/samples/sample8-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample8-450-294@1x.jpg" alt="Этикетка для одежды с названием" />
+                                    <img src="./images/samples/sample8-450-294@1x.jpg" alt="Этикетка для одежды с названием" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
@@ -365,7 +374,8 @@
                                         type="image/jpeg" />
                                     <source srcset="./images/samples/sample9-370-294@1x.jpg 1x,
                                         ./images/samples/sample9-740-588@2x.jpg 2x" type="image/jpeg" />
-                                    <img src="./images/samples/sample9-450-294@1x.jpg" alt="Сотрудник работающий над сайтом" />
+                                    <img src="./images/samples/sample9-450-294@1x.jpg" alt="Сотрудник работающий над сайтом" 
+                                    style="display: block; max-width: 100%; height: auto;" >
                                 </picture>
 
                                 <div class="examples-overlay">
