Изменяет размер иконок клиентов

--- a/portfolio.html
+++ b/portfolio.html
@@ -426,28 +426,28 @@
                 <ul class="list join">
                     <li class="join-item icon-instagram">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-instagram1">
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-twitter">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-twitter1">
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-facebook">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-facebook1">
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-linkedin">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-linkedin1">
                             </svg>
                         </a>
