--- a/index.html
+++ b/index.html
@@ -233,28 +233,28 @@
                         <ul class="list social">
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-instagram1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-twitter1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-facebook1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-linkedin1"></use>
                                     </svg>
                                 </a>
@@ -281,28 +281,28 @@
                         <ul class="list social">
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-instagram1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-twitter1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-facebook1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-linkedin1"></use>
                                     </svg>
                                 </a>
@@ -328,28 +328,28 @@
                         <ul class="list social">
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-instagram1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-twitter1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-facebook1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-linkedin1"></use>
                                     </svg>
                                 </a>
@@ -375,28 +375,28 @@
                         <ul class="list social">
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-instagram1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-twitter1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-facebook1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="link social-link" href="#">
-                                    <svg class="social-icon" wigth="20" height="20">
+                                    <svg class="social-icon" width="20" height="20">
                                         <use href="./images/sprite.svg#icon-linkedin1"></use>
                                     </svg>
                                 </a>
@@ -414,42 +414,42 @@
                 <ul class="list customers-list">
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
-                            <svg class="customers-icon" wigth="44.27" height="49.23">
+                            <svg class="customers-icon" width="44.27" height="49.23">
                                 <use href="./images/sprite.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
-                            <svg class="customers-icon" wigth="40" height="52">
+                            <svg class="customers-icon" width="40" height="52">
                                 <use href="./images/sprite.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
-                            <svg class="customers-icon" wigth="41" height="42.6">
+                            <svg class="customers-icon" width="41" height="42.6">
                                 <use href="./images/sprite.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
-                            <svg class="customers-icon" wigth="79.66" height="42.02">
+                            <svg class="customers-icon" width="79.66" height="42.02">
                                 <use href="./images/sprite.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
-                            <svg class="customers-icon" wigth="59" height="47">
+                            <svg class="customers-icon" width="59" height="47">
                                 <use href="./images/sprite.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="link customers-link" href="#">
-                            <svg class="customers-icon" wigth="88.48" height="45.44">
+                            <svg class="customers-icon" width="88.48" height="45.44">
                                 <use href="./images/sprite.svg#icon-logo6"></use>
                             </svg>
                         </a>
@@ -489,28 +489,28 @@
                 <ul class="list join">
                     <li class="join-item icon-instagram">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-instagram1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-twitter">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-twitter1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-facebook">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-facebook1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item icon-linkedin">
                         <a class="link join-link" href="#">
-                            <svg class="join-icon" wigth="20" height="20">
+                            <svg class="join-icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-linkedin1"></use>
                             </svg>
                         </a>
@@ -546,7 +546,7 @@
             <div class="modal">
                 <div class="close-contaiter">
                     <button class="close-button" data-modal-close type="button">
-                        <svg class="close-icon" wigth="18" height="18">
+                        <svg class="close-icon" width="18" height="18">
                             <use href="./images/sprite.svg#icon-close"></use>
                         </svg>
                     </button>
@@ -559,7 +559,7 @@
                         <span class="user-form__label-title">Имя</span>
                         <div class="user-form--position">                           
                             <input type="text" name="user_name" id="user_name" class="user-form__input" />
-                            <svg class="person user-form__icon" wigth="18" height="18">
+                            <svg class="person user-form__icon" width="18" height="18">
                                 <use href="./images/sprite.svg#icon-person"></use>
                             </svg>
                         </div>
@@ -570,7 +570,7 @@
                         <span class="user-form__label-title">Телефон</span>
                         <div class="user-form--position">
                             <input type="tel" name="user_tel" id="user_tel" class="user-form__input" />
-                            <svg class="phone user-form__icon" wigth="18" height="18">
+                            <svg class="phone user-form__icon" width="18" height="18">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>
                         </div>
@@ -581,7 +581,7 @@
                         <span class="user-form__label-title">Почта</span>
                         <div class="user-form--position">
                             <input type="email" name="user_email" id="user_email" class="user-form__input" />
-                            <svg class="email user-form__icon" wigth="18" height="18">
+                            <svg class="email user-form__icon" width="18" height="18">
                                 <use href="./images/sprite.svg#icon-email"></use>
                             </svg>
                         </div>
