Добавляет стили и разметку в мобильное меню

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <li class="mobile-nav__item"><a class="link mobile-nav__link mobile-nav__link--inactive" href="#">Контакты</a></li>
                 </ul>
             </nav>
+            <div>
             <ul class="list mobile-contacts">
                 <li class="mobile-contacts__item">
                     <a class="link mobile-contacts__link mobile-contacts__link--tel" href="tel:+380961111111">
@@ -82,6 +83,7 @@
                     <a class="link mobile-social__link" href="#">LinkedIn</a>
                 </li>
             </ul>
+            </div>
         </div>
     </header>
 
